--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xyflow/react": "^12.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leva": "^0.10.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "react": "^19.0.0",
